--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Environment variables
+.env
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Node
+node_modules/
+
 /venv
 /backend/__pycache__
 /frontend/__pycache__
